<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        tools:context=".screans.Login_Fragmnet">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAlignment="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_shoe_store"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textAlignment="center"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/inputEmail"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:autofillHints="emailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/inputPassword"
            android:layout_marginTop="15dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="15sp"/>


            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:layout_marginBottom="15sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:text="@string/register"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_height="55dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                />
        </LinearLayout>
</layout>